Updated hero spacing and left-nav UI. Resolves #106.

--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -13,7 +13,7 @@
     font-size: 24px;
     font-weight: 300;
     line-height: 32px;
-    margin: 0 0 16px;
+    margin: 0 0 24px;
 }
 
 /* Small */
